Faltando funcionalidade de geração de PDF, além do JAR.
Imprimindo através do gerenciador padrão do JAVA. Pode ser alterado.

--- a/src/com/br/uepb/bsc7/www/UI/GerenciadorRelatorios.form
+++ b/src/com/br/uepb/bsc7/www/UI/GerenciadorRelatorios.form
@@ -92,6 +92,9 @@
               <Dimension value="[107, 25]"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botImprimirActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botXLS">
           <Properties>
