--- a/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
+++ b/src/com/br/uepb/bsc7/www/UI/InventarioUI.form
@@ -146,7 +146,7 @@
                                   <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="sesaoIni" min="-2" max="-2" attributes="0"/>
+                                  <Component id="sessaoIni" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -169,7 +169,7 @@
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="botOk" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
-                          <Component id="sesaoIni" min="-2" max="-2" attributes="0"/>
+                          <Component id="sessaoIni" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -220,12 +220,12 @@
                     <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="botOk.setMnemonic(KeyEvent.VK_O);"/>
                   </AuxValues>
                 </Component>
-                <Component class="javax.swing.JLabel" name="sesaoIni">
+                <Component class="javax.swing.JLabel" name="sessaoIni">
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Sess&#xe3;o iniciada!"/>
                   </Properties>
                   <AuxValues>
-                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="sesaoIni.setVisible(false);"/>
+                    <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="sessaoIni.setVisible(false);"/>
                   </AuxValues>
                 </Component>
               </SubComponents>
