Uso de Threads para melhorar a experiência com Swing.
Faltando funcionalidade de geração de PDF, além do JAR.

Imprimindo através do gerenciador padrão do JAVA. Pode ser alterado.

--- a/src/com/br/uepb/bsc7/www/UI/SelecionaArquivo.form
+++ b/src/com/br/uepb/bsc7/www/UI/SelecionaArquivo.form
@@ -25,7 +25,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jFileChooser1" min="-2" max="-2" attributes="0"/>
+              <Component id="fc" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -34,16 +34,16 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jFileChooser1" min="-2" max="-2" attributes="0"/>
+              <Component id="fc" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JFileChooser" name="jFileChooser1">
+    <Component class="javax.swing.JFileChooser" name="fc">
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jFileChooser1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="fcActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
